:white_check_mark: 프로젝트 검색 테스트